# unified_teleop

./: CMakeLists.txt  README.md  package.xml
config/: dualshock3_mapping.yaml  dualshock4_mapping.yaml  example_scheme.yaml  input_mapping_test.yaml  spacenav_joy_mapping.yaml
example/: demo_dualshock4.launch.xml  example_scheme.yaml
include/unified_teleop/: controller.hpp  param_helpers.hpp  pnt_stmp_modifiers.hpp  twist_modifiers.hpp
launch/: demo_dualshock4_turtlesim.launch.xml
omnid_teleop/: CMakeLists.txt  package.xml
omnid_teleop/config/: dualshock3_mapping.yaml  dualshock4_mapping.yaml
omnid_teleop/src/: delta_direct_joystick.cpp  delta_joystick.cpp  mobile_joystick.cpp  twist_linear_angular.cpp
src/: cmd_vel_mirror_joystick.cpp  controller.cpp  delta_direct_joystick.cpp  delta_joystick.cpp  lifecycle_point_stamped_incr.cpp  lifecycle_twist_mirror.cpp  mobile_joystick.cpp  pnt_stmp_modifiers.cpp  point_stamped_incr.cpp  point_stamped_incr_joystick.cpp  point_stamped_joystick.cpp  point_stamped_mirror.cpp  point_stamped_mirror_joystick.cpp  twist_merger.cpp  twist_mirror.cpp  twist_modifiers.cpp
test/: input_mapping_test.yaml  integration_test.launch.xml  integration_test_node.cpp  output_scheme_test.yaml  playground_test.launch.xml  playground_test_node.cpp
test/joy_test/: joy_test_0.mcap  metadata.yaml
test/pntstmp_incr/: metadata.yaml
test/pntstmp_mirror/: metadata.yaml
