<?xml version="1.0"?>
<package format="3">
  <name>omnid_teleop</name>
  <version>0.0.1</version>
  <description>Interface between the controller and omnid robot</description>

  <maintainer email="elwin@northwestern.edu">Matthew Elwin</maintainer>

  <license>GPLv3</license>


  <url type="repository">http://github.com/omnid/omnid_control</url>

  <author email="elwin@northwestern.edu">Matthew Elwin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>cmakeme</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rosnu</depend>
  <depend>omnid_core_linux</depend>
  <depend>omnid_firmware</depend>
  <depend>nuhal</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>omnid_lib</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>catch_ros2</depend>
  <exec_depend>omnid_description</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
